<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="@dimen/_10sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            style="@style/imageColor"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:contentDescription="@string/todo"
            android:src="@drawable/logo_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/do_you_want_to_logout"
            android:textSize="@dimen/_15sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/no"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:id="@+id/tvYes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/yes"
                android:textSize="@dimen/_15sdp" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>