<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.CreatePostActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbCreateActivity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|left"
            android:text="@string/create_post"
            android:textSize="@dimen/_15sdp"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/btnPost"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="end|right"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/btn_bg_active"
            android:text="@string/post"
            android:textColor="@color/white"
            tools:ignore="RtlHardcoded" />

    </androidx.appcompat.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#ccc" />

    <EditText
        android:id="@+id/edtPostText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/empty_bg"
        android:hint="@string/what_s_on_your_mind"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:padding="@dimen/_10sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_10sdp">

            <ImageView
                android:id="@+id/ivPostImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/llAddImage"
            android:padding="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/_30sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:contentDescription="@string/todo"
                android:layout_marginEnd="@dimen/_3sdp"
                android:src="@drawable/add_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_image"
                android:textColor="@color/blue"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>